--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dadi/web-handlebars",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "A Handlebars.js interface for DADI Web",
   "main": "index.js",
   "scripts": {
